fix: 시큐리티 중복기능 코드 삭제